--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -1,4 +1,5 @@
 /* ----------------------全体設定----------------------------- */
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP:400,700&display=swap');
 *, *:before, *:after  {
 	margin:0;
 	padding:0;
@@ -6,7 +7,7 @@
 }
 body {
 	overflow-x: hidden;
-	font-family: sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
 	font-size: 11pt;
 	font-weight: lighter;
 }
@@ -44,7 +45,7 @@ header.sitemenu {
 	width: 100%;
 	height: 60px;
 	padding: 10px;
-  background-color: rgba(255,255,255,0.9);
+  background-color:rgb(255,245,238);
   transition: 0.6s;
   z-index: 999;
 }
@@ -232,7 +233,7 @@ div#wrapper {
 	max-width: 100vw;
 	height: auto;
   /* background-color: rgb(255, 250, 230) */
-  background: linear-gradient(to bottom right, rgb(245,222,179), rgb(255,245,238));
+  /* background: linear-gradient(to bottom right, rgb(245,222,179), rgb(255,245,238)); */
 }
 /* div#contents {
 	margin: 80px 50px 0 50px;
@@ -299,36 +300,21 @@ p{
 	margin: 20px;
 }
 
-/* ----------------------img関連------------------------------- */
-div.top_img {
-  top: 0;
-  left: 0;
-  height: 600px;
-  width: 100vw;
-  background-image: url("../img/backhome.jpg");
-  background-size: cover;
-  background-attachment:fixed;
+/* ----------------------topのマージン------------------------------- */
+.top-margin{
+  margin: 70px;
 }
-img {
-	margin: 20px;
-	border-radius: 50%;  /* 角丸半径を50%にする(=円形にする) */
-	width:  130px;       /* ※縦横を同値に */
-	height: 130px;       /* ※縦横を同値に */
-		/* border: 9px solid #000000;枠線を付加 */
+
+/*----------------------contentsのマージン--------------------------- */
+.contents-title{
+  text-align: center;
 }
-img[src$="./img/Logo.jpg"]{
-	margin: -150px;
-	width:  500px;
-	height: 500px;
+.contents{
+  text-align: center;
+  border: solid 2px;
+  border-radius: 30px;
 }
-.scale-img{
-	transition-duration: 0.5s; /*変化の時間*/
-}
-.scale-img:hover{
-	transform: scale(1.2,1.2);/*1.2倍になる*/
-	cursor: pointer;/*カーソルに合わせる*/
-}
-/* ----------------------footer関連----------------------------- */
+/*---------------------footer関連----------------------------- */
 footer {
   margin: 0 auto;
   padding: 20px 0;
